# vaulx-protocol

./: .env.example  .gitignore  .mailmap  .vercelignore  Anchor.toml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PARTNERSHIPS.md  README.md  ROADMAP.md  STATUS.md  USER_TODO.md  Vaulx_Pitch_v10.pptx  package.json  pnpm-lock.yaml  tsconfig.anchor.json  tsconfig.base.json  turbo.json  vercel.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/bridge/: .env.example  package.json
apps/indexer/: .env.example  package.json  tsconfig.json  vitest.config.ts
apps/web/: .env.example  .gitignore  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
docs/: DEMO_BUILD_SPEC.md  README.md  STATUS.md  VAULX_Architecture_Thread.md  VAULX_Architecture_v2.md  VAULX_Strategy_Thread.md  Vaulx_MB_OnePager.docx  vaulx-arch-v2.md  vaulx-arch-v3-expanded.md  vaulx-architecture-mobile.md  vaulx-fi-architecture.md  vaulx-liquidity-stack.md
docs/architecture/: 2026-04-29-vaulx-business-flow-and-partners.md  2026-04-29-vaulx-composable-blocks.md  (+2 more)
programs/loan/: Cargo.toml
programs/loan/src/: attestation.rs  civic.rs  errors.rs  lib.rs  math.rs  state.rs
programs/trdc/: Cargo.toml
programs/trdc/src/: errors.rs  lib.rs  state.rs
site/: .env.example  .gitignore  README.md  composer.json  package-lock.json  package.json  phpstan.neon  vite.config.js
supabase/: config.toml.example
tests/: _shared.ts  auction.spec.ts  bootstrap.ts  civic-gate.spec.ts  civic-happy-path.spec.ts  cnft-mint.spec.ts  custody.spec.ts  disburse.spec.ts  f2-kyc-pda-option-b.spec.ts  kyc-attestation.spec.ts  loan.spec.ts  moment-1-e2e.spec.ts  moments-2-3-4-e2e.spec.ts  moments-5-9-e2e.spec.ts  redstone-ltv.spec.ts  repayment.spec.ts  security-hotfix-v1v2v3.spec.ts  trdc.spec.ts  vault.spec.ts
(+603 files in other folders)
