[package]
name = "loan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loan"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl  = { workspace = true, features = ["token"] }
trdc = { path = "../trdc", features = ["cpi"] }
vault = { path = "../vault", features = ["cpi"] }
auction = { path = "../auction", features = ["cpi"] }
