[package]
name = "trdc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trdc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
mpl-bubblegum = "1.4.0"
spl-account-compression = { version = "0.4.2", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
